--- a/.gitignore
+++ b/.gitignore
@@ -1,101 +1,52 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+*.class
+~*.*
+*.bak
+*.tmp
+*.MF
+*.iml
 
-# C extensions
-*.so
+/code/**/.classpath
+/code/**/.mymetadata
+/code/**/.project
+/code/**/.settings/
+/code/**/test-output/
+/code/**/.apt_generated/
+/code/**/.externalToolBuilders/
+/code/**/target/
+/code/**/test-output/
+/code/**/.apt_generated/
+/code/**/logs/
+/code/**/src/main/webapp/META-INF/
+/code/**/src/main/webapp/WEB-INF/classes/
+/code/**/src/main/webapp/WEB-INF/lib/
 
-# Distribution / packaging
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+/**/.idea
+/**/.classpath
+/**/.mymetadata
+/**/.project
+/**/.settings/
+/**/test-output/
+/**/.apt_generated/
+/**/.externalToolBuilders/
+/**/target/
+/**/test-output/
+/**/.apt_generated/
+/**/logs/
+/**/src/main/webapp/META-INF/
+/**/src/main/webapp/WEB-INF/classes/
+/**/src/main/webapp/WEB-INF/lib/
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
 
-# Translations
-*.mo
-*.pot
 
-# Django stuff:
-*.log
-local_settings.py
+/code/**/.idea
+/code/**/node_modules
+/code/**/bower_components
 
-# Flask stuff:
-instance/
-.webassets-cache
 
-# Scrapy stuff:
-.scrapy
+/code/**/.gradle
+/code/**/build
 
-# Sphinx documentation
-docs/_build/
+/**/__pycache__
 
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# pyenv
-.python-version
-
-# celery beat schedule file
-celerybeat-schedule
-
-# SageMath parsed files
-*.sage.py
-
-# dotenv
-.env
-
-# virtualenv
-.venv
-venv/
-ENV/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
