--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@
 /**/target/
 /**/test-output/
 /**/.apt_generated/
+/**/logs/
 /**/src/main/webapp/META-INF/
 /**/src/main/webapp/WEB-INF/classes/
 /**/src/main/webapp/WEB-INF/lib/
