--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -1,5 +1,6 @@
 Flask==0.12
 Flask-Bootstrap==3.0.3.1
+Flask-HTTPAuth==2.7.0
 Flask-Mail==0.9.0
 Flask-Migrate==2.0.3
 Flask-Moment==0.2.1
@@ -20,3 +21,4 @@ itsdangerous==0.24
 python-editor==1.0.3
 PyMySQL==0.7.11
 gunicorn==18.0
+selenium==2.45.0
