--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -8,6 +8,7 @@ Flask-SQLAlchemy==2.1
 Flask-Script==2.0.5
 Flask-WTF==0.14.2
 Flask-Login==0.3.1
+Flask-DebugToolbar==0.10.1
 Jinja2==2.9.5
 Mako==1.0.6
 MarkupSafe==0.23
