--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -9,6 +9,7 @@ Flask-Script==2.0.5
 Flask-WTF==0.14.2
 Flask-Login==0.3.1
 Flask-DebugToolbar==0.10.1
+Flask-RESTful==0.3.6
 Jinja2==2.9.5
 Mako==1.0.6
 MarkupSafe==0.23
