--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -1,39 +1,35 @@
-alembic==0.8.10
-aniso8601==2.0.0
-APScheduler==3.3.1
-blinker==1.3
-certifi==2018.1.18
-chardet==3.0.4
+alembic==1.0.0
+aniso8601==3.0.2
+asn1crypto==0.24.0
+blinker==1.4
+cffi==1.11.5
 click==6.7
-Flask==0.12
+cryptography==2.3
+dominate==2.3.1
+Flask==1.0.2
 Flask-Bootstrap==3.3.7.1
 Flask-DebugToolbar==0.10.1
-Flask-HTTPAuth==2.7.0
-Flask-Login==0.3.1
-Flask-Mail==0.9.0
-Flask-Migrate==2.0.3
+Flask-HTTPAuth==3.2.4
+Flask-Login==0.4.1
+Flask-Mail==0.9.1
+Flask-Migrate==2.2.1
 Flask-Moment==0.6.0
 Flask-RESTful==0.3.6
-Flask-Script==2.0.5
-Flask-SQLAlchemy==2.1
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
-gunicorn==19.5.0
-idna==2.6
-influxdb==4.1.1
+idna==2.7
 itsdangerous==0.24
-Jinja2==2.9.5
-Mako==1.0.6
-MarkupSafe==0.23
-numpy==1.14.0
-PyMySQL==0.8.0
-python-dateutil==2.6.1
+Jinja2==2.10
+Mako==1.0.7
+MarkupSafe==1.0
+pycparser==2.18
+PyMySQL==0.9.2
+python-dateutil==2.7.3
 python-editor==1.0.3
-pytz==2017.3
-requests==2.18.4
-selenium==2.45.0
+pytz==2018.5
 six==1.11.0
-SQLAlchemy==1.1.5
-tzlocal==1.5.1
-urllib3==1.22
-Werkzeug==0.11.15
-WTForms==2.1
+SQLAlchemy==1.2.10
+visitor==0.1.3
+Werkzeug==0.14.1
+WTForms==2.2.1
