--- a/code/pyfw/requirements.txt
+++ b/code/pyfw/requirements.txt
@@ -7,10 +7,6 @@ click==6.7
 cryptography==2.3
 dominate==2.3.1
 Flask==1.0.2
-Flask-Bootstrap==3.3.7.1
-Flask-DebugToolbar==0.10.1
-Flask-HTTPAuth==3.2.4
-Flask-Login==0.4.1
 Flask-Mail==0.9.1
 Flask-Migrate==2.2.1
 Flask-Moment==0.6.0
@@ -20,7 +16,7 @@ Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 idna==2.7
 itsdangerous==0.24
-Jinja2==2.10
+Jinja2==2.10.1
 Mako==1.0.7
 MarkupSafe==1.0
 pycparser==2.18
@@ -29,8 +25,9 @@ python-dateutil==2.7.3
 python-editor==1.0.3
 pytz==2018.5
 six==1.11.0
-SQLAlchemy==1.2.10
+SQLAlchemy==1.3.5
 visitor==0.1.3
 Werkzeug==0.14.1
 WTForms==2.2.1
 ForgeryPy==0.1
+tornado==6.0.3
